--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> tool kits</title>
+    <link rel="icon" type="image.jpg" href="/image.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="container">
+            
             <h1><img src="image.jpg" alt="AI Tool Kits Logo" class="site-logo"> Tool kits</h1>
             <nav>
                 <ul>
