--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
             <div class="blog-grid">
                 <!-- Blog Post Cards Go Here -->
                 <div class="blog-card">
-                    <img src=".jpg" alt="Blog Post Image">
+                    <img src="abstract-technology-bAnner-background.jpg" alt="Blog Post Image">
                     <h3>The Future of AI: A New Era of Possibilities</h3>
                     <p class="description">Artificial Intelligence is rapidly transforming the world, unlocking unprecedented opportunities across industries. From smarter automation and personalized experiences to breakthroughs in healthcare and education, AI is shaping a future driven by innovation, efficiency, and human-AI collaboration. This new era holds the promise of solving complex global challenges and redefining how we live, work, and connect.</p>
                     <button class="read-more-btn"><a href="blog1.html">Read More</a></button>
