--- a/blog.html
+++ b/blog.html
@@ -30,13 +30,13 @@
             <div class="blog-grid">
                 <!-- Blog Post Cards Go Here -->
                 <div class="blog-card">
-                    <img src="abstract-technology-bAnner-background.jpg" alt="Blog Post Image">
+                    <img src="ilustracion-vector-diseno-banner-inteligencia-artificial-ai_46250-3403.avif" alt="Blog Post Image">
                     <h3>The Future of AI: A New Era of Possibilities</h3>
                     <p class="description">Artificial Intelligence is rapidly transforming the world, unlocking unprecedented opportunities across industries. From smarter automation and personalized experiences to breakthroughs in healthcare and education, AI is shaping a future driven by innovation, efficiency, and human-AI collaboration. This new era holds the promise of solving complex global challenges and redefining how we live, work, and connect.</p>
                     <button class="read-more-btn"><a href="blog1.html">Read More</a></button>
                 </div>
                 <div class="blog-card">
-                    <img src="placeholder.jpg" alt="Blog Post Image">
+                    <img src="abstract-technology-banner-background.jpg" alt="Blog Post Image">
                     <h3>Understanding Machine Learning: A Beginner's Guide</h3>
                     <p class="description">Machine Learning is a branch of Artificial Intelligence that enables computers to learn from data and improve over time without being explicitly programmed. This beginner-friendly guide explores the core concepts, types (supervised, unsupervised, and reinforcement learning), and real-world applications of machine learning—helping you grasp how machines make predictions, recognize patterns, and drive smarter decisions across various industries.</p>
                     <button class="read-more-btn"><a href="blog2.html">Read More</a></button>
