--- a/blog.html
+++ b/blog.html
@@ -42,49 +42,49 @@
                     <button class="read-more-btn"><a href="blog2.html">Read More</a></button>
                 </div>
                 <div class="blog-card">
-                    <img src="placeholder.jpg" alt="Blog Post Image">
+                    <img src="futurristic-banner-background-with-wireframe-terrain-vector.jpg" alt="Blog Post Image">
                     <h3>AI in Education: Tools and Trends</h3>
                     <p class="description">Discovering how AI is enhancing learning experiences, automating administrative tasks, and personalizing education.</p>
                     <button class="read-more-btn"><a href="blog3.html">Read More</a></button>
                 </div>
                 <div class="blog-card">
-                    <img src="placeholder.jpg" alt="Blog Post Image">
+                    <img src="banner-inteligencia-artificial-generativo-ai_881377-3739.avif" alt="Blog Post Image">
                     <h3>Ethical Considerations in Artificial Intelligence</h3>
                     <p class="description">Examining the important ethical questions surrounding AI development and deployment, from bias to privacy.</p>
                     <button class="read-more-btn"><a href="blog4.html">Read More</a></button>
                 </div>
                 <div class="blog-card">
-                    <img src="placeholder.jpg" alt="Blog Post Image">
+                    <img src="th.jpg" alt="Blog Post Image">
                     <h3>How AI is Transforming the Job Market</h3>
                     <p class="description">Analyzing the impact of AI on various industries and the skills needed to thrive in an AI-driven economy.</p>
                     <button class="read-more-btn"><a href="blog5.html">Read More</a></button>
                 </div>
                 <div class="blog-card">
-                    <img src="placeholder.jpg" alt="Blog Post Image">
+                    <img src="th(2).jpg" alt="Blog Post Image">
                     <h3>AI and Creativity: Can Machines Be Artists?</h3>
                     <p class="description">Exploring the fascinating intersection of artificial intelligence and creative fields like art, music, and writing.</p>
                     <button class="read-more-btn"><a href="blog6.html">Read More</a></button>
                 </div>
                 <div class="blog-card">
-                    <img src="placeholder.jpg" alt="Blog Post Image">
+                    <img src="th(3).jpg" alt="Blog Post Image">
                     <h3>The Role of AI in Cybersecurity</h3>
                     <p class="description">Understanding how AI is being used to detect and prevent cyber threats, and its limitations.</p>
                     <button class="read-more-btn"><a href="blog7.html">Read More</a></button>
                 </div>
                 <div class="blog-card">
-                    <img src="placeholder.jpg" alt="Blog Post Image">
+                    <img src="th(6).jpg" alt="Blog Post Image">
                     <h3>Exploring Natural Language Processing (NLP)</h3>
                     <p class="description">A look into the technology that allows computers to understand, interpret, and generate human language.</p>
                     <button class="read-more-btn"><a href="blog8.html">Read More</a></button>
                 </div>
                 <div class="blog-card">
-                    <img src="placeholder.jpg" alt="Blog Post Image">
+                    <img src="programming-and-coding-futuristic-banner-vector.jpg" alt="Blog Post Image">
                     <h3>Building Your First AI Model</h3>
                     <p class="description">A practical guide for beginners on the steps involved in creating a simple artificial intelligence model.</p>
                     <button class="read-more-btn"><a href="blog9.html">Read More</a></button>
                 </div>
                 <div class="blog-card">
-                    <img src="placeholder.jpg" alt="Blog Post Image">
+                    <img src="ilustracion-vector-diseno-banner-inteligencia-artificial-ai_46250-3403.avif" alt="Blog Post Image">
                     <h3>AI in Everyday Life: Hidden Applications</h3>
                     <p class="description">Revealing the many ways artificial intelligence is already integrated into our daily routines, often without us knowing.</p>
                     <button class="read-more-btn"><a href="blog10.html">Read More</a></button>
