--- a/blog1.html
+++ b/blog1.html
@@ -26,9 +26,9 @@
 
     <main>
         <section class="container">
-            <img src="u.jpg" alt=""class="blog-post-image">
+            <img src="u.jpg" alt=""class="blog-post-image" length="4px breath="3px">
             <div class="blog-meta">
-                <img src="image.jpg" alt="Writer Image" class="writer-image">
+                <img src="WIN_20230618_11_09_31_Pro.jpg" alt="Writer Image" class="writer-image">
                 <div>
                     <strong>By: ARJUN KUMAR SINGH</strong><br>
                     <span style="color:#777;font-size:0.95em;">Published: may 10, 2025</span>
