--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
     <footer>
         <div class="container">
             <p>Founder: Arjun Kumar Singh</p>
+             <p><a href="https://www.jotform.com/agent/019706b0724c723580964dcba0c0c756daf0" class="chatbot-link">Chat with us</a></p>
             <p>© 2025 Tool Kits. All rights reserved.</p>
         </div>
     </footer>
