--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section id="hero">
         <div class="container">
             <h2>Welcome to Tool kits</h2>
-            <p>Discover amazing tools at great prices.</p>
+            <p>Discover the future with AI Tools Store – your one-stop destination to explore, access, and utilize the most powerful AI tools in the world. Whether you're a developer, creator, student, or business owner, this platform brings all the latest and trending AI apps under</p>
             <a href="#products-section" class="btn">Shop Now</a>
         </div>
     </section>
