--- a/blog2.html
+++ b/blog2.html
@@ -26,6 +26,13 @@
 
     <main>
         <section class="container">
+             <img src="u.jpg" alt=""class="blog-post-image" length="4px breath="3px">
+            <div class="blog-meta">
+                <img src="WIN_20230618_11_09_31_Pro.jpg" alt="Writer Image" class="writer-image">
+                <div>
+                    <strong>By: ARJUN KUMAR SINGH</strong><br>
+                    <span style="color:#777;font-size:0.95em;">Published: may 10, 2025</span>
+                </div>
             <h1>Understanding Machine Learning: A Beginner’s Guide</h1>
 
   <p>Have you ever wondered how Netflix recommends your favorite shows? Or how your phone recognizes your face? Behind the scenes, one powerful concept is working its magic: <strong>Machine Learning</strong>.</p>
