--- a/blog2.html
+++ b/blog2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Understanding Machine Learning: A Beginner's Guide</title>
+    <title>The Future of AI: A New Era of Possibilities</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,13 +26,14 @@
 
     <main>
         <section class="container">
-             <img src="u.jpg" alt=""class="blog-post-image" length="4px breath="3px">
+            <img src="u.jpg" alt=""class="blog-post-image" length="4px breath="3px">
             <div class="blog-meta">
                 <img src="WIN_20230618_11_09_31_Pro.jpg" alt="Writer Image" class="writer-image">
                 <div>
                     <strong>By: ARJUN KUMAR SINGH</strong><br>
                     <span style="color:#777;font-size:0.95em;">Published: may 10, 2025</span>
                 </div>
+            </div>
             <h1>Understanding Machine Learning: A Beginner’s Guide</h1>
 
   <p>Have you ever wondered how Netflix recommends your favorite shows? Or how your phone recognizes your face? Behind the scenes, one powerful concept is working its magic: <strong>Machine Learning</strong>.</p>
@@ -89,7 +90,7 @@
   <p>Machine learning may sound complex at first, but once you understand the basics, it becomes a fascinating and rewarding journey. In a world driven by data and technology, learning how machines learn is one of the smartest moves you can make.</p>
 
   <p>Start today, stay consistent, and soon you’ll go from beginner to builder. The future of technology is in your hands—and machine learning is your stepping stone.</p>
-            
+
         </section>
     </main>
 
