--- a/blog5.html
+++ b/blog5.html
@@ -5,6 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How AI is Transforming the Job Market</title>
     <link rel="stylesheet" href="style.css">
+     <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f3f4f6;
+      color: #333;
+    }
+    header {
+      background-color: #111827;
+      color: #fff;
+      text-align: center;
+      padding: 30px 20px;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.4em;
+    }
+    header p {
+      margin-top: 10px;
+      font-size: 1.1em;
+    }
+    main {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 25px;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
+    }
+    h2 {
+      color: #1f2937;
+      margin-top: 1.5em;
+    }
+    p {
+      line-height: 1.7;
+      margin: 1em 0;
+    }
+    ul {
+      margin-left: 20px;
+    }
+    li {
+      margin-bottom: 10px;
+    }
+ </style>
 </head>
 <body>
     <header>
@@ -26,9 +71,41 @@
 
     <main>
         <section class="container">
-            <h2>How AI is Transforming the Job Market</h2>
-            <!-- Blog post content goes here -->
-            <p>This is a placeholder for the blog post content.</p>
+            <h1>How AI is Transforming the Job Market</h1>
+    <p>Opportunities, Challenges, and the Future of Work</p>
+  </header>
+
+  <main>
+    <p>Artificial Intelligence (AI) is no longer a futuristic concept—it’s a current reality reshaping how industries operate. One of the most significant areas of impact is the job market. AI is influencing job roles, skill demands, employment trends, and how businesses operate on a fundamental level. Here's how AI is transforming the modern workforce.</p>
+
+    <h2>1. Automation of Routine Tasks</h2>
+    <p>AI-powered systems are capable of automating repetitive and rule-based tasks in industries such as manufacturing, customer service, data entry, and even finance. This increases efficiency and allows human workers to focus on higher-value activities. However, it also means that jobs relying heavily on routine may decline.</p>
+
+    <h2>2. Creation of New Job Roles</h2>
+    <p>While some roles are being replaced, AI is also creating new opportunities. Careers in data science, machine learning engineering, AI ethics, robotics, and AI product management are in high demand. These roles require advanced technical skills and a deep understanding of AI systems and data.</p>
+
+    <h2>3. The Rise of Hybrid Jobs</h2>
+    <p>AI has led to the emergence of hybrid roles that combine human creativity with machine intelligence. For example, marketing analysts use AI tools to generate insights, and designers use AI to accelerate prototyping. Professionals need to upskill and blend technical proficiency with soft skills to stay relevant.</p>
+
+    <h2>4. Talent Shortage in AI Fields</h2>
+    <p>There’s a growing demand for skilled AI professionals, but the talent pool is limited. This shortage presents opportunities for those entering the tech industry, and it's driving investment in AI education, certification programs, and bootcamps worldwide.</p>
+
+    <h2>5. Evolving Workplace Dynamics</h2>
+    <p>Remote collaboration, AI-powered productivity tools, and intelligent virtual assistants are redefining how teams work. AI is helping businesses optimize workflows, analyze team performance, and enhance decision-making through predictive analytics.</p>
+
+    <h2>6. Ethical and Social Implications</h2>
+    <p>As AI reshapes the job market, concerns around fairness, bias, surveillance, and the digital divide are growing. Companies and governments must collaborate to ensure ethical implementation, inclusive access, and protection against job displacement for vulnerable workers.</p>
+
+    <h2>Key Takeaways</h2>
+    <ul>
+      <li><strong>Adaptability:</strong> Workers must continuously learn and adapt to changing technologies.</li>
+      <li><strong>Reskilling:</strong> Governments and organizations should invest in reskilling programs to prepare workers for AI-era jobs.</li>
+      <li><strong>Human-AI Collaboration:</strong> The future lies in leveraging the strengths of both humans and machines.</li>
+      <li><strong>Policy Frameworks:</strong> Regulations are needed to ensure fair labor practices and data usage.</li>
+    </ul>
+
+    <h2>Conclusion</h2>
+    <p>AI is not eliminating jobs across the board — it's transforming them. The key to thriving in an AI-driven economy is preparation. Workers, employers, and policymakers must collaborate to harness the benefits of AI while mitigating its risks. The future of work is intelligent, collaborative, and full of potential.</p>
         </section>
     </main>
 
